# nce-video-pipeline

./: .env.example  .gitignore  README.md  _commit_msg.tmp  pyproject.toml  requirements.txt
assets/: README.md
config/: settings.py
data/lessons/: lesson_02.json  lesson_03.json  lesson_04.json  lesson_05.json  lesson_06.json  lesson_07.json  lesson_08.json  lesson_09.json  lesson_10.json  lesson_11.json  lesson_12.json  lesson_13.json  lesson_14.json  lesson_15.json  lesson_16.json  lesson_17.json  lesson_18.json  lesson_19.json  lesson_20.json  lesson_21.json  lesson_22.json  lesson_23.json  lesson_24.json  lesson_25.json  lesson_26.json  lesson_27.json  lesson_28.json  lesson_29.json  lesson_30.json
data/sample_lessons/: lesson_01.json  lesson_03.json
docs/: INFINITETALK_DEPLOY.md  QUICKSTART.md
scripts/: generate_all.py
src/: main.py
src/api/: routes.py
src/models/: __init__.py  lesson.py  script.py  video.py
src/pipeline/: __init__.py  pipeline.py
src/services/: __init__.py  anthropic_llm.py  digital_human_service.py  openai_llm.py  openai_tts.py  publisher.py  script_generator.py  subtitle_service.py  tts_service.py  video_assembler.py
tests/: conftest.py  test_anthropic_llm.py  test_api.py  test_digital_human_service.py  test_main.py  test_models.py  test_openai_llm.py  test_openai_tts.py  test_pipeline.py  test_publisher.py  test_routes_pipeline.py  test_script_generator.py  test_subtitle_service.py  test_tts_service.py  test_video_assembler.py
